--- a/HTML-CSS/module 5/css/style.css
+++ b/HTML-CSS/module 5/css/style.css
@@ -81,6 +81,10 @@
     margin-left: 34px;
 }
 
+.slider {
+    position: relative;
+}
+
 .slider-block {
     position: relative;
     height: 600px;
@@ -95,9 +99,21 @@
     bottom: 0px;
 }
 
+.slider-container {
+    position: absolute;
+    width: 1110px;
+    left: 50%;
+    transform: translate(-50%);
+    height: 600px;
+    top: 0px;
+
+}
+
+
 
 .slider-button {
-    top: 315px;
+    position: absolute;
+    top: 37.5%;
     width: 104px;
     height: 104px;
     background-color: rgba(26, 188, 156, .61);
@@ -111,19 +127,18 @@
 
 .left-button {
     position: absolute;
-    left: 375px;  
+    left: 0;  
 }
 
 .right-button {
     position: absolute;
-    right: 375px; 
+    right: 0px; 
 }
 
 .slide-text {
     position: absolute;
-    top: 309px;
-    left: 560px;
-    margin: auto;
+    top: 36.66%;
+    left: 16.81%;
 }
 
 .slide-name {
